--- a/WorkSpace/basic.html
+++ b/WorkSpace/basic.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>example 1-2</title>
+        <title>tester</title>
     </head>
     <body>
-        <h2>example 1-2</H2>
-        <script type="text/javascript" src="work_5.js"></script> 
+        <h2>tester</H2>
+        <script type="text/javascript" src="work_7.js"></script> 
     </body>
 </html>
